fix: complete one-client refactor — surface polish + 100% test rewrite
Lands the consolidated one-client surface (fused config/flags/logging/audit/
jobs clients + new platform/account clients, sync and async) together with the
full surface-quality pass against the corrected Python canonical (v3.2.157):

- P1: relocate ConfigResolver/ResolvedConfig/ResolvedClientConfig and
  ApiExceptionHandler to com.smplkit.internal; PlatformClient's wired ctor
  becomes an @ApiStatus.Internal factory seam; exclude com.smplkit.internal.*
  from the published Javadoc.
- P2: structured @param/@return/@throws across the wrapper; async twins each
  carry their own block.
- P3: scrub ADR refs, storage-mechanic terms and cross-language jargon from
  customer-facing text.
- P4: drop the dissolved "Management" concept (ResolvedManagementConfig ->
  ResolvedClientConfig; "Management surface" -> "CRUD surface").
- P6: jobs new_ exposes the full 7 params with cron/ISO-8601/"now" schedule
  semantics; audit drops severity and the do_not_forward list filter to match
  the canonical.
- Carryover fixes: config ensureAncestorsCached (transitive parent fetch +
  regression test); forwarder/job header values documented as plaintext
  round-trip; ListEventsInput.search scoping doc.

Test suite rewritten to the new surface at 100% wrapper line coverage, with a
suite-wide WebSocket-dial neutralizer keeping the unit suite network-free.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>